<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">mDrone</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Scanning...</string>

    <string name="control">Control</string>
    <string name="control_left">L-Move,R-View</string>
    <string name="control_right">R-Move,L-View</string>

    <string name="control_us">US Hands</string>
    <string name="control_jp">JP Hands</string>

    <string name="ble">Bluetooth</string>
    <string name="web_cam">WIFI Camera</string>
    <string name="save">Save</string>
    <string name="ble_scan">Scan BLE</string>
    <string name="conn_web_cam">Preview</string>

    <!-- BLE -->
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="ready">Ready</string>

    <string name="unknown_device">Unknown device</string>
    <string name="without_service">Without Soft Serial Service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string name="title_activity_live_card_service">Hello World LiveCard</string>
    <string name="action_stop">Stop</string>
    <string name="hello_world">Hello world!</string>

</resources>
