<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" android:layout_centerHorizontal="true"
        android:background="@color/dark_semi_transparent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            tools:context=".SettingFragment" android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/control"
                android:id="@+id/handTitle" android:layout_gravity="center_horizontal"/>

        <Switch android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/handTitle"
                android:id="@+id/rightHand"
                android:textOn="@string/control_jp" android:textOff="@string/control_us"
                android:layout_centerHorizontal="true"
                android:checked="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rightHand"
                android:layout_alignParentStart="true"
                android:text="Message" android:id="@+id/textView2"
                android:visibility="gone"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rightHand"
                android:text="BLE Msg send interval（ms）"
                android:id="@+id/msgSendInterval" android:inputType="number" android:layout_toEndOf="@+id/textView2"
                android:visibility="gone"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msgSendInterval"
                android:layout_alignParentStart="true"
                android:text="Block" android:id="@+id/textView"
                android:visibility="gone"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msgSendInterval"
                android:text="BLE Block send interval（ms）"
                android:id="@+id/blockSendInterval" android:inputType="number"
                android:layout_toEndOf="@+id/textView2"
                android:visibility="gone"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/setting_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/blockSendInterval"
                android:text="@string/ble"
                android:id="@+id/bleTitle" android:layout_gravity="center_horizontal"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BLE Mac Address"
                android:id="@+id/bleAdr"
                android:layout_below="@+id/bleTitle" android:layout_alignParentStart="true"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_scan"
                android:id="@+id/buttonScan"
                android:layout_below="@+id/bleAdr"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/setting_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/buttonScan"
                android:text="@string/web_cam"
                android:id="@+id/webcamTitle" android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Web Cam Address and port"
                android:id="@+id/webCamAdr"
                android:layout_below="@+id/webcamTitle"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_vertical_margin"
                android:text="@string/save"
                android:id="@+id/btnSave"
                android:layout_below="@+id/webCamAdr"/>

    </RelativeLayout>
</ScrollView>
